--- a/06.multiple_regression/slides/slideslinearmodelsPart3.tex
+++ b/06.multiple_regression/slides/slideslinearmodelsPart3.tex
@@ -561,14 +561,14 @@ F-statistic: 23.67 on 3 and 96 DF,  p-value: 1.49e-11
 
 
 
-  \begin{alertblock}{Exercise}
+  \begin{exampleblock}{Exercise}
     \begin{enumerate}
       \item Load the data masssex.csv
       \item Fit a simple regression explaining movement by mass for each sex separately. Is the relationship different between sexes?
       \item Fit the multiple regression explaining movement by mass, sex, and mass:sex, using the full dataset. Is the relationship different between sexes?
       \item Try to understand the discreapancy by plotting the data
     \end{enumerate}
-  \end{alertblock}
+  \end{exampleblock}
 
 \end{frame}
 %%%%%%%%%%%
@@ -671,7 +671,7 @@ F-statistic: 23.67 on 3 and 96 DF,  p-value: 1.49e-11
         \hlstd{newdata}\hlopt{$}\hlstd{prediction[newdata}\hlopt{$}\hlstd{y_location}\hlopt{==}\hlnum{4}\hlstd{],} \hlkwc{col}\hlstd{=}\hlstr{"red"}\hlstd{)}
 \end{alltt}
 \end{kframe}
-\includegraphics[width=0.7\textwidth,height=0.7\textheight]{figure/predadditive-1} 
+\includegraphics[width=0.5\textwidth,height=0.5\textheight]{figure/predadditive-1} 
 
 \end{knitrout}
 
